# ChangeLog for app-emacs/dvc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Mar 2008; Christian Faulhammer <opfer@gentoo.org> dvc-9999.ebuild:
  GNU Emacs 22 is at least needed, reflect this in NEED_EMACS

*dvc-9999 (02 Feb 2008)

  02 Feb 2008; Christian Faulhammer <opfer@gentoo.org> dvc-9999.ebuild:
  do a live ebuild
