@@ -1,3 +1,4 @@
 AUX 50dvc-gentoo.el 95 RMD160 d3c6d99434793c29623fff26eda45a9800973234 SHA1 143360369aa25de60406cd58c0cd2708dad934a5 SHA256 cd09d32ad7f0b02a5c0de74ab4c98fdc6a1398c837424cbe204fc563d68cd125
 EBUILD dvc-9999.ebuild 766 RMD160 35389d7f9cddfbff466a679fdf3b97de9fb6e5b4 SHA1 69101ebb2b4133791f825857c06f7dbf90dee511 SHA256 d33a6012017a836c3f33ebb36f8e5f6b48ad916bd13adfd4dccfd5e1adea5287
-MISC ChangeLog 366 RMD160 c9a12e139eb6304cb73db657ec126d9251f9e6b6 SHA1 0aca3bae41856b52418012ed7ba950b9d3209799 SHA256 e9e200870d957dfad2aace40f3e9737f8dce71023c738ed57c3f61fc9ac5cf22
+MISC ChangeLog 445 RMD160 4b7a8f0b5213fcb5a7482638d1b28d8bdf2efdec SHA1 53c19714e30ff5d30482dc8d0b575b83ea7167dc SHA256 b95b85883c5f082517a0d349138d4d1e1f5d89cc9bc0f3aa47377d136a2ea2a8
+MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
